# agentlint

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: pages.yml
artifacts/: sample-report.html  ui-fixture.json  unsafe-report.html  unsafe-report.json
devpost/: demo-script.md  submission-checklist.md  submission.md
docs/: adversarial-regression.md  validation.md
examples/safe-project/: AGENTS.md  README.md
examples/safe-project/plugin/demo/: .mcp.json
examples/safe-project/plugin/demo/.codex-plugin/: plugin.json
examples/unsafe-project/: AGENTS.md  README.md
examples/unsafe-project/plugin/demo/: .mcp.json
examples/unsafe-project/plugin/demo/.codex-plugin/: plugin.json
examples/unsafe-project/service/: AGENTS.md
plugin/.agents/plugins/: marketplace.json
plugin/agentlint/.codex-plugin/: plugin.json
plugin/agentlint/skills/audit-agent-config/: SKILL.md
plugin/agentlint/skills/audit-agent-config/agents/: openai.yaml
plugin/plugins/agentlint/: README.md
plugin/plugins/agentlint/.codex-plugin/: plugin.json
plugin/plugins/agentlint/skills/audit-agent-config/: SKILL.md
scripts/: __init__.py  build_public_site.py
site/: README.md  app.js  index.html  styles.css
src/agentlint/: __init__.py  cli.py  discovery.py  models.py  parsers.py  reporters.py  rules.py  scanner.py
tests/: test_adversarial_rules.py  test_core_engine.py  test_explicit_excludes.py  test_frontmatter_yaml.py  test_path_privacy.py  test_public_site.py  test_reporters.py
video/: DESIGN.md  index.html  narration.txt
(+4 files in other folders)
