[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agentlint"
version = "0.1.0"
description = "Explainable, zero-execution auditing for Codex instructions, skills, plugins, and MCP configuration."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Yibiao Li" }]
keywords = ["codex", "agents", "skills", "mcp", "security", "linter"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agentlint = "agentlint.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
